k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager
  namespace: goapp
  labels:
    app: task-manager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-manager
  template:
    metadata:
      labels:
        app: task-manager
    spec:
      containers:
      - name: task-manager
        image: damirkrepe/task-manager:0.4
        ports:  
        - containerPort: 8080
