k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-frontend
  namespace: goapp
  labels:
    app: task-manager-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-manager-frontend
  template:
    metadata:
      labels:
        app: task-manager-frontend
    spec:
      containers:
      - name: task-manager-frontend
        image: damirkrepe/frontend-task:0.1
        imagePullPolicy: Always
        ports:  
        - containerPort: 80
