k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: goapp
spec:      
  selector:
    app: task-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
