k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service-frontend
  namespace: goapp
spec:      
  selector:
    app: task-manager-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
