k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-ingress
  namespace: goapp
spec:
  ingressClassName: nginx
  rules:
  - host: task-manager.local
    http:
      paths: 

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80
      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service-frontend
            port:
              number: 80
